--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
+streamlit==1.30.0
+streamlit-webrtc==0.47.1
+
 ultralytics==8.0.196
 torch==2.0.1
 torchvision==0.15.2
-opencv-python==4.8.0.76
-streamlit==1.30.0
+
+opencv-python-headless==4.8.0.76
+av==10.0.0
 numpy==1.24.4
-pandas==2.0.3
-matplotlib==3.7.2
 Pillow==10.0.0
 PyYAML==6.0
-scipy==1.11.2
-seaborn==0.12.2
-tqdm==4.66.1
-
-streamlit
-streamlit-webrtc
-ultralytics
-opencv-python-headless
-av
-numpy   
