--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-streamlit==1.30.0
-streamlit-webrtc==0.47.1
-
+flask==3.0.2
 ultralytics==8.0.196
 torch==2.0.1
 torchvision==0.15.2
-
 opencv-python-headless==4.8.0.76
-av==9.2.0
 numpy==1.24.4
 Pillow==10.0.0
 PyYAML==6.0
